# wally

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  poetry_scripts.py  pyproject.toml  setup.cfg
tests/: __init__.py  test_example.py
wally/: __init__.py  example.py
